# OceanLink

./: .env.example  .gitignore  Cargo.toml  Justfile  Makefile  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
contracts/: foundry.toml
contracts/script/: Deploy.s.sol  DeployMockUSDT.s.sol  DeployVault.s.sol
contracts/src/: MockUSDT.sol
contracts/test/: Vault.t.sol
crates/: Cargo.toml
crates/src/: api.rs  app.rs  blockchain.rs  executor.rs  lib.rs  main.rs  models.rs  risk.rs  solver.rs  state.rs
crates/tests/: netting_flow.rs
data/: bridge_data.mapped.clean.peak_hour.csv
docs/: .gitignore  architecture.md
docs/thesis/: .gitignore  cover.tex  latexmkrc  references.bib  style-notes.md  thesis.tex
docs/thesis/chapters/: abtract_vi.tex  acknowledgement.tex  assurance.tex  conclusion.tex  glossary.tex
docs/thesis/chapters/c1/: c1_introduction.tex
docs/thesis/chapters/c2/: c2_chapter.tex
docs/thesis/chapters/c3/: c3_3_2_three_layer_model.tex  c3_3_3_1_htlc.tex  c3_3_3_2_apigateway.tex  c3_3_3_3_orderbook.tex  c3_3_3_4_matching.tex  c3_3_3_5_liquidity.tex  c3_3_3_6_execution.tex  c3_3_3_7_fallback.tex  c3_3_3_8_eventbus.tex  c3_3_3_intro.tex  c3_chapter.tex
docs/thesis/chapters/c4/: c4_chapter.tex
docs/thesis/chapters/c5/: c5_chapter.tex
feeder/: Cargo.toml  README.md
feeder/src/: api.rs  balances.rs  blockchain.rs  main.rs  matching.rs  models.rs  orderbook.rs
references/: README.md
script/: deploy.sh
